INSTALL( FILES
	distributions.pluginmap
	makemakefileam.php
	embedded.pluginmap
	import_export.pluginmap
	x11device.pluginmap
	all.pluginmap
	under_development.pluginmap
	analysis.pluginmap
	plots.pluginmap
	DESTINATION share/apps/rkward/ )

INSTALL( FILES
	distributions/binomial_tail_probabilities.php
	distributions/negative_binomial_quantiles.xml
	distributions/plot_hypergeometric_distribution.rkh
	distributions/plot_beta_distribution.rkh
	distributions/plot_dist_common.php
	distributions/plot_weibull_distribution.php
	distributions/cauchy_probabilities.xml
	distributions/plot_lognormal_distribution.xml
	distributions/tukey_probabilities.xml
	distributions/poisson_quantiles.xml
	distributions/plot_exponential_distribution.xml
	distributions/log_normal_probabilities.xml
	distributions/plot_logistic_distribution.xml
	distributions/plot_chi_squared_distribution.php
	distributions/plot_negbinomial_distribution.rkh
	distributions/plot_t_distribution.xml
	distributions/plot_logistic_distribution.php
	distributions/chi_squared_probabilities.xml
	distributions/beta_probabilities.xml
	distributions/cauchy_quantiles.xml
	distributions/plot_cauchy_distribution.xml
	distributions/wilcoxon_probabilities.php
	distributions/chi_squared_quantiles.xml
	distributions/log_normal_quantiles.xml
	distributions/plot_gamma_distribution.php
	distributions/exponential_probabilities.xml
	distributions/logistic_probabilities.php
	distributions/normal_quantiles.xml
	distributions/weibull_quantiles.xml
	distributions/normal_probabilities.xml
	distributions/plot_cauchy_distribution.php
	distributions/gamma_quantiles.xml
	distributions/weibull_probabilities.php
	distributions/gamma_quantiles.php
	distributions/plot_f_distribution.php
	distributions/cauchy_probabilities.php
	distributions/exponential_quantiles.php
	distributions/t_quantiles.php
	distributions/hypergeometric_quantiles.php
	distributions/cauchy_quantiles.php
	distributions/plot_normal_distribution.rkh
	distributions/geom_probabilities.xml
	distributions/geom_probabilities.php
	distributions/plot_wilcoxon_distribution.rkh
	distributions/negative_binomial_probabilities.php
	distributions/wilcoxon_probabilities.xml
	distributions/plot_binomial_distribution.rkh
	distributions/plot_lognormal_distribution.php
	distributions/gamma_probabilities.xml
	distributions/plot_geometric_distribution.rkh
	distributions/normal_probabilities.php
	distributions/plot_poisson_distribution.rkh
	distributions/hypergeometric_quantiles.xml
	distributions/logistic_quantiles.php
	distributions/plot_exponential_distribution.php
	distributions/plot_normal_distribution.xml
	distributions/plot_wilcoxon_distribution.php
	distributions/exponential_probabilities.php
	distributions/uniform_probabilities.php
	distributions/uniform_quantiles.php
	distributions/plot_t_distribution.rkh
	distributions/binomial_quantiles.xml
	distributions/plot_tukey_distribution.rkh
	distributions/negative_binomial_probabilities.xml
	distributions/t_probabilities.php
	distributions/dist_snippets.xml
	distributions/f_quantiles.xml
	distributions/plot_f_distribution.xml
	distributions/weibull_quantiles.php
	distributions/plot_binomial_distribution.xml
	distributions/f_probabilities.php
	distributions/plot_hypergeometric_distribution.php
	distributions/plot_lognormal_distribution.rkh
	distributions/plot_poisson_distribution.php
	distributions/geom_quantiles.xml
	distributions/poisson_probabilities.xml
	distributions/gumbel_probabilities.xml
	distributions/plot_beta_distribution.php
	distributions/chi_squared_quantiles.php
	distributions/poisson_quantiles.php
	distributions/f_probabilities.xml
	distributions/logistic_probabilities.xml
	distributions/plot_uniform_distribution.php
	distributions/plot_weibull_distribution.rkh
	distributions/log_normal_probabilities.php
	distributions/gumbel_quantiles.php
	distributions/tukey_probabilities.php
	distributions/gamma_probabilities.php
	distributions/plot_wilcoxon_distribution.xml
	distributions/poisson_probabilities.php
	distributions/f_quantiles.php
	distributions/plot_tukey_distribution.xml
	distributions/plot_gamma_distribution.xml
	distributions/negative_binomial_quantiles.php
	distributions/plot_exponential_distribution.rkh
	distributions/t_quantiles.xml
	distributions/gumbel_quantiles.xml
	distributions/plot_poisson_distribution.xml
	distributions/plot_f_distribution.rkh
	distributions/binomial_tail_probabilities.xml
	distributions/log_normal_quantiles.php
	distributions/normal_quantiles.php
	distributions/chi_squared_probabilities.php
	distributions/plot_gamma_distribution.rkh
	distributions/wilcoxon_quantiles.xml
	distributions/plot_geometric_distribution.xml
	distributions/plot_dist_common_snippets.xml
	distributions/weibull_probabilities.xml
	distributions/gumbel_probabilities.php
	distributions/uniform_probabilities.xml
	distributions/plot_binomial_distribution.php
	distributions/plot_beta_distribution.xml
	distributions/plot_weibull_distribution.xml
	distributions/plot_tukey_distribution.php
	distributions/plot_chi_squared_distribution.rkh
	distributions/geom_quantiles.php
	distributions/plot_cauchy_distribution.rkh
	distributions/hypergeometric_probabilities.xml
	distributions/hypergeometric_probabilities.php
	distributions/plot_chi_squared_distribution.xml
	distributions/plot_normal_distribution.php
	distributions/t_probabilities.xml
	distributions/logistic_quantiles.xml
	distributions/plot_negbinomial_distribution.xml
	distributions/beta_probabilities.php
	distributions/exponential_quantiles.xml
	distributions/binomial_quantiles.php
	distributions/tukey_quantiles.xml
	distributions/plot_t_distribution.php
	distributions/beta_quantiles.xml
	distributions/tukey_quantiles.php
	distributions/plot_uniform_distribution.xml
	distributions/wilcoxon_quantiles.php
	distributions/plot_logistic_distribution.rkh
	distributions/plot_uniform_distribution.rkh
	distributions/plot_hypergeometric_distribution.xml
	distributions/beta_quantiles.php
	distributions/plot_negbinomial_distribution.php
	distributions/uniform_quantiles.xml
	distributions/plot_geometric_distribution.php
	DESTINATION share/apps/rkward/distributions )

INSTALL( FILES
	distributions/clt/plot_hypergeometric_clt.php
	distributions/clt/plot_normal_clt.php
	distributions/clt/plot_negbinomial_clt.xml
	distributions/clt/plot_logistic_clt.php
	distributions/clt/plot_exponential_clt.rkh
	distributions/clt/plot_binomial_clt.rkh
	distributions/clt/plot_t_clt.php
	distributions/clt/plot_wilcoxon_clt.xml
	distributions/clt/plot_clt_snippets.xml
	distributions/clt/plot_weibull_clt.xml
	distributions/clt/plot_hypergeometric_clt.rkh
	distributions/clt/plot_beta_clt.rkh
	distributions/clt/plot_wilcoxon_clt.rkh
	distributions/clt/plot_geometric_clt.php
	distributions/clt/plot_normal_clt.rkh
	distributions/clt/plot_binomial_clt.xml
	distributions/clt/plot_binomial_clt.php
	distributions/clt/plot_weibull_clt.php
	distributions/clt/plot_logistic_clt.xml
	distributions/clt/plot_poisson_clt.xml
	distributions/clt/plot_chi_squared_clt.rkh
	distributions/clt/plot_gamma_clt.rkh
	distributions/clt/plot_lognormal_clt.xml
	distributions/clt/plot_hypergeometric_clt.xml
	distributions/clt/plot_uniform_clt.php
	distributions/clt/plot_lognormal_clt.rkh
	distributions/clt/plot_t_clt.xml
	distributions/clt/plot_gamma_clt.xml
	distributions/clt/plot_chi_squared_clt.xml
	distributions/clt/plot_geometric_clt.rkh
	distributions/clt/plot_wilcoxon_clt.php
	distributions/clt/plot_normal_clt.xml
	distributions/clt/plot_beta_clt.php
	distributions/clt/plot_weibull_clt.rkh
	distributions/clt/plot_t_clt.rkh
	distributions/clt/plot_f_clt.rkh
	distributions/clt/plot_f_clt.php
	distributions/clt/plot_clt_common.php
	distributions/clt/plot_logistic_clt.rkh
	distributions/clt/plot_beta_clt.xml
	distributions/clt/plot_gamma_clt.php
	distributions/clt/plot_geometric_clt.xml
	distributions/clt/plot_uniform_clt.rkh
	distributions/clt/plot_exponential_clt.php
	distributions/clt/plot_negbinomial_clt.rkh
	distributions/clt/plot_clt_help_snippets.xml
	distributions/clt/plot_chi_squared_clt.php
	distributions/clt/plot_f_clt.xml
	distributions/clt/plot_poisson_clt.rkh
	distributions/clt/plot_uniform_clt.xml
	distributions/clt/plot_exponential_clt.xml
	distributions/clt/plot_lognormal_clt.php
	distributions/clt/plot_negbinomial_clt.php
	distributions/clt/plot_poisson_clt.php
	DESTINATION share/apps/rkward/distributions/clt )

INSTALL( FILES
	distributions/tests/shapiro_test.xml
	distributions/tests/lillie_test.xml
	distributions/tests/sf_test.php
	distributions/tests/jb_test.php
	distributions/tests/jb_test.rkh
	distributions/tests/sf_test.xml
	distributions/tests/pearson_test.xml
	distributions/tests/cvm_test.php
	distributions/tests/jb_test.xml
	distributions/tests/lillie_test.php
	distributions/tests/ad_test.xml
	distributions/tests/pearson_test.php
	distributions/tests/ad_test.php
	distributions/tests/cvm_test.xml
	distributions/tests/shapiro_test.php
	DESTINATION share/apps/rkward/distributions/tests )

INSTALL( FILES
	simple_anova/description.xml
	simple_anova/code.php
	DESTINATION share/apps/rkward/simple_anova )

INSTALL( FILES
	00saveload/setworkdir.php
	00saveload/setworkdir.rkh
	00saveload/setworkdir.xml
	DESTINATION share/apps/rkward/00saveload )

INSTALL( FILES
	00saveload/import/source.php
	00saveload/import/import_spss.rkh
	00saveload/import/import_csv.xml
	00saveload/import/source.rkh
	00saveload/import/load_data.php
	00saveload/import/import_csv.php
	00saveload/import/import_spss.php
	00saveload/import/source.xml
	00saveload/import/import_spss.xml
	00saveload/import/import_csv.rkh
	00saveload/import/load_data.xml
	00saveload/import/load_data.rkh
	DESTINATION share/apps/rkward/00saveload/import )

INSTALL( FILES
	00saveload/save/write_table.php
	00saveload/save/write_table.xml
	DESTINATION share/apps/rkward/00saveload/save )

INSTALL( FILES
	00saveload/save/write/description.xml
	00saveload/save/write/code.php
	DESTINATION share/apps/rkward/00saveload/save/write )

INSTALL( FILES
	00saveload/save/skeleton/description.xml
	00saveload/save/skeleton/code.php
	DESTINATION share/apps/rkward/00saveload/save/skeleton )

INSTALL( FILES
	00saveload/save/save/description.xml
	00saveload/save/save/code.php
	DESTINATION share/apps/rkward/00saveload/save/save )

INSTALL( FILES
	plots/plot_options.php
	plots/histogram.xml
	plots/cor_graph.rkh
	plots/scatterplot_matrix.rkh
	plots/piechart.php
	plots/plot_stepfun_options.xml
	plots/dotchart.php
	plots/plot.rkh
	plots/box_plot.php
	plots/histogram_options.rkh
	plots/histogram_options.php
	plots/barplot.rkh
	plots/pareto.xml
	plots/scatterplot.xml
	plots/pareto.rkh
	plots/scatterplot.php
	plots/plot.xml
	plots/plot.php
	plots/stripchart_plot.xml
	plots/color_chooser.rkh
	plots/barplot.xml
	plots/plot_options.rkh
	plots/cor_graph.xml
	plots/scatterplot_matrix.xml
	plots/density_plot.php
	plots/stripchart_plot.php
	plots/density_plot.rkh
	plots/histogram.php
	plots/scatterplot_matrix.php
	plots/dotchart.rkh
	plots/barplot_embed.php
	plots/density_plot.xml
	plots/histogram.rkh
	plots/barplot.php
	plots/plot_stepfun_options.rkh
	plots/plot_options.xml
	plots/box_plot.xml
	plots/color_chooser.php
	plots/pareto.php
	plots/barplot_embed.rkh
	plots/ecdf_plot.xml
	plots/stem.rkh
	plots/stem.xml
	plots/barplot_embed.xml
	plots/stem.php
	plots/plot_stepfun_options.php
	plots/histogram_options.xml
	plots/cor_graph.php
	plots/piechart.xml
	plots/dotchart.xml
	plots/ecdf_plot.php
	plots/ecdf_plot.rkh
	plots/piechart.rkh
	plots/color_chooser.xml
	DESTINATION share/apps/rkward/plots )

INSTALL( FILES
	descriptive/descriptive_statistics.xml
	descriptive/descriptive_statistics.rkh
	descriptive/descriptive_statistics.php
	DESTINATION share/apps/rkward/descriptive )

INSTALL( FILES
	x11device/grid.php
	x11device/export.rkh
	x11device/grid.rkh
	x11device/export.xml
	x11device/export.php
	x11device/grid.xml
	DESTINATION share/apps/rkward/x11device )

INSTALL( FILES
	analysis/crosstab_multi.xml
	analysis/crosstab_multi.php
	analysis/corr_matrix.xml
	analysis/corr_matrix.rkh
	analysis/crosstab.php
	analysis/t_test_two_vars.rkh
	analysis/crosstab_multi.rkh
	analysis/t_test_two_vars.php
	analysis/corr_matrix.php
	analysis/crosstab.rkh
	analysis/t_test_two_vars.xml
	analysis/crosstab.xml
	DESTINATION share/apps/rkward/analysis )

INSTALL( FILES
	analysis/outliers/chisq_out_test.xml
	analysis/outliers/grubbs_test.php
	analysis/outliers/grubbs_test.rkh
	analysis/outliers/outlier.xml
	analysis/outliers/chisq_out_test.rkh
	analysis/outliers/dixon_test.xml
	analysis/outliers/outlier.rkh
	analysis/outliers/outlier.php
	analysis/outliers/dixon_test.php
	analysis/outliers/dixon_test.rkh
	analysis/outliers/chisq_out_test.php
	analysis/outliers/grubbs_test.xml
	DESTINATION share/apps/rkward/analysis/outliers )

INSTALL( FILES
	analysis/regression/linear_regression.php
	analysis/regression/linear_regression.xml
	analysis/regression/linear_regression.rkh
	DESTINATION share/apps/rkward/analysis/regression )

INSTALL( FILES
	analysis/TESTS/mood_test.php
	analysis/TESTS/PP_test.xml
	analysis/TESTS/mood_test.xml
	analysis/TESTS/mood_test.rkh
	analysis/TESTS/PP_test.php
	analysis/TESTS/PP_test.rkh
	DESTINATION share/apps/rkward/analysis/TESTS )

INSTALL( FILES
	analysis/moments/bonett_test.rkh
	analysis/moments/moment.php
	analysis/moments/skewness_kurtosis_test.php
	analysis/moments/bonett_test.php
	analysis/moments/agostino_test.php
	analysis/moments/moment.rkh
	analysis/moments/agostino_test.rkh
	analysis/moments/agostino_test.xml
	analysis/moments/anscombe_test.rkh
	analysis/moments/moment.xml
	analysis/moments/skewness_kurtosis_test.xml
	analysis/moments/anscombe_test.php
	analysis/moments/skewness_kurtosis_test.rkh
	analysis/moments/anscombe_test.xml
	analysis/moments/bonett_test.xml
	DESTINATION share/apps/rkward/analysis/moments )

INSTALL( FILES
	analysis/time_series/Box_test.php
	analysis/time_series/Box_test.rkh
	analysis/time_series/Box_test.xml
	analysis/time_series/kpss_test.rkh
	analysis/time_series/kpss_test.php
	analysis/time_series/kpss_test.xml
	DESTINATION share/apps/rkward/analysis/time_series )

INSTALL( FILES
	analysis/ansari_bradley/ansari_bradley_test.php
	analysis/ansari_bradley/ansari_bradley_test.rkh
	analysis/ansari_bradley/ansari_bradley_exact_test.xml
	analysis/ansari_bradley/ansari_bradley_exact_test.php
	analysis/ansari_bradley/ansari_bradley_exact_test.rkh
	analysis/ansari_bradley/ansari_bradley_test.xml
	DESTINATION share/apps/rkward/analysis/ansari_bradley )

INSTALL( FILES
	analysis/variances/F_test.xml
	analysis/variances/F_test.rkh
	analysis/variances/bartlett_test.xml
	analysis/variances/bartlett_test.php
	analysis/variances/fligner_test.rkh
	analysis/variances/fligner_test.xml
	analysis/variances/F_test.php
	analysis/variances/bartlett_test.rkh
	analysis/variances/fligner_test.php
	DESTINATION share/apps/rkward/analysis/variances )

INSTALL( FILES
	analysis/wilcoxon/wilcoxon_exact_test.php
	analysis/wilcoxon/wilcoxon_exact_test.xml
	analysis/wilcoxon/wilcoxon_test.php
	analysis/wilcoxon/wilcoxon_test.xml
	analysis/wilcoxon/wilcoxon_test.rkh
	DESTINATION share/apps/rkward/analysis/wilcoxon )

INSTALL( FILES
	uni1.2/description.xml
	uni1.2/code.php
	DESTINATION share/apps/rkward/uni1.2 )

