pluginsdir = $(kde_datadir)/rkward/
dist_plugins_DATA = \
	x11device.pluginmap \
	plots.pluginmap \
	distributions.pluginmap \
	all.pluginmap \
	import_export.pluginmap \
	under_development.pluginmap \
	analysis.pluginmap

pluginsXdescriptivedir = $(kde_datadir)/rkward/descriptive
dist_pluginsXdescriptive_DATA = \
	descriptive/descriptive_statistics.php \
	descriptive/skewness_kurtosis_test.xml \
	descriptive/descriptive_statistics.xml \
	descriptive/skewness_kurtosis_test.php \
	descriptive/descriptive_statistics.rkh

pluginsXanalysisdir = $(kde_datadir)/rkward/analysis
dist_pluginsXanalysis_DATA = \
	analysis/corr_matrix.php \
	analysis/corr_matrix.xml \
	analysis/corr_matrix.rkh

pluginsXanalysisXansariUbradleydir = $(kde_datadir)/rkward/analysis/ansari_bradley
dist_pluginsXanalysisXansariUbradley_DATA = \
	analysis/ansari_bradley/ansari_bradley_exact_test.xml \
	analysis/ansari_bradley/ansari_bradley_test.php \
	analysis/ansari_bradley/ansari_bradley_exact_test.php \
	analysis/ansari_bradley/ansari_bradley_test.xml

pluginsXanalysisXwilcoxondir = $(kde_datadir)/rkward/analysis/wilcoxon
dist_pluginsXanalysisXwilcoxon_DATA = \
	analysis/wilcoxon/wilcoxon_test.xml \
	analysis/wilcoxon/wilcoxon_exact_test.xml \
	analysis/wilcoxon/wilcoxon_test.php \
	analysis/wilcoxon/wilcoxon_exact_test.php \
	analysis/wilcoxon/wilcoxon_test.rkh

pluginsXanalysisXmomentsdir = $(kde_datadir)/rkward/analysis/moments
dist_pluginsXanalysisXmoments_DATA = \
	analysis/moments/bonett_test.php \
	analysis/moments/agostino_test.xml \
	analysis/moments/moment.rkh \
	analysis/moments/skewness_kurtosis_test.xml \
	analysis/moments/agostino_test.rkh \
	analysis/moments/anscombe_test.xml \
	analysis/moments/moment.php \
	analysis/moments/skewness_kurtosis_test.rkh \
	analysis/moments/agostino_test.php \
	analysis/moments/anscombe_test.rkh \
	analysis/moments/bonett_test.xml \
	analysis/moments/skewness_kurtosis_test.php \
	analysis/moments/anscombe_test.php \
	analysis/moments/bonett_test.rkh \
	analysis/moments/moment.xml

pluginsXx11devicedir = $(kde_datadir)/rkward/x11device
dist_pluginsXx11device_DATA = \
	x11device/export.xml \
	x11device/export.rkh \
	x11device/export.php \
	x11device/export_new.php \
	x11device/export_new.rkh \
	x11device/export_new.xml

pluginsX00saveloaddir = $(kde_datadir)/rkward/00saveload
dist_pluginsX00saveload_DATA = \
	00saveload/setworkdir.xml \
	00saveload/setworkdir.php \
	00saveload/setworkdir.rkh

pluginsX00saveloadXloaddir = $(kde_datadir)/rkward/00saveload/load
pluginsX00saveloadXloadXloaddir = $(kde_datadir)/rkward/00saveload/load/load
dist_pluginsX00saveloadXloadXload_DATA = \
	00saveload/load/load/code.php \
	00saveload/load/load/description.xml

pluginsX00saveloadXloadXsourcedir = $(kde_datadir)/rkward/00saveload/load/source
dist_pluginsX00saveloadXloadXsource_DATA = \
	00saveload/load/source/code.php \
	00saveload/load/source/description.xml

pluginsX00saveloadXloadXreadtabledir = $(kde_datadir)/rkward/00saveload/load/readtable
pluginsX00saveloadXimportdir = $(kde_datadir)/rkward/00saveload/import
dist_pluginsX00saveloadXimport_DATA = \
	00saveload/import/import_spss.xml \
	00saveload/import/import_csv.xml \
	00saveload/import/import_spss.rkh \
	00saveload/import/import_csv.rkh \
	00saveload/import/import_spss.php \
	00saveload/import/import_csv.php

pluginsX00saveloadXsavedir = $(kde_datadir)/rkward/00saveload/save
pluginsX00saveloadXsaveXskeletondir = $(kde_datadir)/rkward/00saveload/save/skeleton
dist_pluginsX00saveloadXsaveXskeleton_DATA = \
	00saveload/save/skeleton/code.php \
	00saveload/save/skeleton/description.xml

pluginsX00saveloadXsaveXwritedir = $(kde_datadir)/rkward/00saveload/save/write
dist_pluginsX00saveloadXsaveXwrite_DATA = \
	00saveload/save/write/code.php \
	00saveload/save/write/description.xml

pluginsX00saveloadXsaveXsavedir = $(kde_datadir)/rkward/00saveload/save/save
dist_pluginsX00saveloadXsaveXsave_DATA = \
	00saveload/save/save/code.php \
	00saveload/save/save/description.xml

pluginsXplotsdir = $(kde_datadir)/rkward/plots
dist_pluginsXplots_DATA = \
	plots/plot_options.php \
	plots/stripchart_plot.xml \
	plots/histogram.php \
	plots/ecdf_plot.php \
	plots/box_plot.xml \
	plots/barplot.rkh \
	plots/cor_graph.rkh \
	plots/scatterplot_matrix.xml \
	plots/plot_options.xml \
	plots/barplot.php \
	plots/cor_graph.php \
	plots/scatterplot.php \
	plots/histogram.xml \
	plots/ecdf_plot.xml \
	plots/barplot.xml \
	plots/density_plot.php \
	plots/cor_graph.xml \
	plots/scatterplot.xml \
	plots/stripchart_plot.php \
	plots/scatterplot_matrix.rkh \
	plots/plot_options.rkh \
	plots/density_plot.xml \
	plots/box_plot.php \
	plots/scatterplot_matrix.php \
	plots/color_chooser.rkh \
	plots/color_chooser.php \
	plots/color_chooser.xml \
	plots/histogram_options.xml \
	plots/pareto.php \
	plots/histogram_options.php \
	plots/pareto.xml \
	plots/pareto.rkh

pluginsXdistributionsdir = $(kde_datadir)/rkward/distributions
dist_pluginsXdistributions_DATA = \
	distributions/plot_negbinomial_distribution.xml \
	distributions/gamma_probabilities.php \
	distributions/plot_chi_squared_distribution.xml \
	distributions/plot_normal_distribution.xml \
	distributions/plot_wilcoxon_distribution.php \
	distributions/f_probabilities.xml \
	distributions/f_quantiles.php \
	distributions/cauchy_quantiles.xml \
	distributions/log_normal_probabilities.xml \
	distributions/wilcoxon_probabilities.php \
	distributions/binomial_tail_probabilities.php \
	distributions/uniform_quantiles.xml \
	distributions/log_normal_quantiles.php \
	distributions/poisson_quantiles.php \
	distributions/plot_beta_distribution.xml \
	distributions/plot_cauchy_distribution.xml \
	distributions/lillie_test.xml \
	distributions/tukey_probabilities.xml \
	distributions/chi_squared_quantiles.xml \
	distributions/tukey_quantiles.php \
	distributions/plot_poisson_distribution.php \
	distributions/plot_tukey_distribution.rkh \
	distributions/plot_hypergeometric_distribution.xml \
	distributions/plot_exponential_distribution.xml \
	distributions/ad_test.xml \
	distributions/cvm_test.xml \
	distributions/negative_binomial_probabilities.xml \
	distributions/plot_lognormal_distribution.xml \
	distributions/plot_binomial_distribution.xml \
	distributions/weibull_quantiles.xml \
	distributions/gamma_quantiles.php \
	distributions/hypergeometric_probabilities.xml \
	distributions/plot_uniform_distribution.rkh \
	distributions/plot_t_distribution.xml \
	distributions/gumbel_quantiles.xml \
	distributions/plot_negbinomial_distribution.rkh \
	distributions/plot_chi_squared_distribution.rkh \
	distributions/plot_normal_distribution.rkh \
	distributions/plot_geometric_distribution.xml \
	distributions/cauchy_probabilities.php \
	distributions/geom_quantiles.xml \
	distributions/logistic_probabilities.php \
	distributions/wilcoxon_quantiles.php \
	distributions/beta_probabilities.xml \
	distributions/plot_tukey_distribution.php \
	distributions/beta_quantiles.php \
	distributions/t_quantiles.xml \
	distributions/plot_beta_distribution.rkh \
	distributions/plot_cauchy_distribution.rkh \
	distributions/sf_test.php \
	distributions/normal_probabilities.xml \
	distributions/negative_binomial_quantiles.xml \
	distributions/plot_uniform_distribution.php \
	distributions/plot_hypergeometric_distribution.rkh \
	distributions/plot_exponential_distribution.rkh \
	distributions/plot_negbinomial_distribution.php \
	distributions/plot_lognormal_distribution.rkh \
	distributions/plot_chi_squared_distribution.php \
	distributions/plot_binomial_distribution.rkh \
	distributions/hypergeometric_quantiles.xml \
	distributions/plot_normal_distribution.php \
	distributions/plot_gamma_distribution.xml \
	distributions/binomial_quantiles.xml \
	distributions/plot_f_distribution.xml \
	distributions/plot_t_distribution.rkh \
	distributions/f_probabilities.php \
	distributions/uniform_probabilities.xml \
	distributions/cauchy_quantiles.php \
	distributions/log_normal_probabilities.php \
	distributions/uniform_quantiles.php \
	distributions/exponential_probabilities.xml \
	distributions/plot_geometric_distribution.rkh \
	distributions/plot_beta_distribution.php \
	distributions/chi_squared_probabilities.xml \
	distributions/plot_cauchy_distribution.php \
	distributions/lillie_test.php \
	distributions/tukey_probabilities.php \
	distributions/chi_squared_quantiles.php \
	distributions/plot_logistic_distribution.xml \
	distributions/plot_hypergeometric_distribution.php \
	distributions/plot_exponential_distribution.php \
	distributions/ad_test.php \
	distributions/cvm_test.php \
	distributions/negative_binomial_probabilities.php \
	distributions/weibull_probabilities.xml \
	distributions/normal_quantiles.xml \
	distributions/plot_lognormal_distribution.php \
	distributions/plot_binomial_distribution.php \
	distributions/weibull_quantiles.php \
	distributions/gumbel_probabilities.xml \
	distributions/hypergeometric_probabilities.php \
	distributions/plot_t_distribution.php \
	distributions/gumbel_quantiles.php \
	distributions/geom_probabilities.xml \
	distributions/plot_weibull_distribution.xml \
	distributions/poisson_probabilities.xml \
	distributions/plot_geometric_distribution.php \
	distributions/logistic_quantiles.xml \
	distributions/plot_gamma_distribution.rkh \
	distributions/geom_quantiles.php \
	distributions/shapiro_test.xml \
	distributions/plot_f_distribution.rkh \
	distributions/pearson_test.xml \
	distributions/beta_probabilities.php \
	distributions/exponential_quantiles.xml \
	distributions/t_probabilities.xml \
	distributions/t_quantiles.php \
	distributions/normal_probabilities.php \
	distributions/negative_binomial_quantiles.php \
	distributions/gamma_probabilities.xml \
	distributions/plot_logistic_distribution.rkh \
	distributions/plot_wilcoxon_distribution.xml \
	distributions/hypergeometric_quantiles.php \
	distributions/plot_gamma_distribution.php \
	distributions/binomial_quantiles.php \
	distributions/f_quantiles.xml \
	distributions/plot_f_distribution.php \
	distributions/wilcoxon_probabilities.xml \
	distributions/binomial_tail_probabilities.xml \
	distributions/log_normal_quantiles.xml \
	distributions/uniform_probabilities.php \
	distributions/poisson_quantiles.xml \
	distributions/plot_weibull_distribution.rkh \
	distributions/exponential_probabilities.php \
	distributions/chi_squared_probabilities.php \
	distributions/tukey_quantiles.xml \
	distributions/plot_poisson_distribution.xml \
	distributions/plot_logistic_distribution.php \
	distributions/weibull_probabilities.php \
	distributions/normal_quantiles.php \
	distributions/gamma_quantiles.xml \
	distributions/gumbel_probabilities.php \
	distributions/plot_wilcoxon_distribution.rkh \
	distributions/cauchy_probabilities.xml \
	distributions/logistic_probabilities.xml \
	distributions/geom_probabilities.php \
	distributions/plot_weibull_distribution.php \
	distributions/wilcoxon_quantiles.xml \
	distributions/poisson_probabilities.php \
	distributions/logistic_quantiles.php \
	distributions/shapiro_test.php \
	distributions/pearson_test.php \
	distributions/plot_tukey_distribution.xml \
	distributions/beta_quantiles.xml \
	distributions/exponential_quantiles.php \
	distributions/t_probabilities.php \
	distributions/sf_test.xml \
	distributions/plot_poisson_distribution.rkh \
	distributions/plot_uniform_distribution.xml \
	distributions/plot_binomial_clt.xml \
	distributions/plot_binomial_clt.php \
	distributions/plot_binomial_clt.rkh

pluginsXwritetabledir = $(kde_datadir)/rkward/writetable
dist_pluginsXwritetable_DATA = \
	writetable/code.php \
	writetable/description.xml

pluginsX00meansdir = $(kde_datadir)/rkward/00means
pluginsX00meansX00ttestsdir = $(kde_datadir)/rkward/00means/00ttests
pluginsX00meansX00ttestsX00independentUsamplesdir = $(kde_datadir)/rkward/00means/00ttests/00independent_samples
dist_pluginsX00meansX00ttestsX00independentUsamples_DATA = \
	00means/00ttests/00independent_samples/code.php \
	00means/00ttests/00independent_samples/description.xml

pluginsXuni1D2dir = $(kde_datadir)/rkward/uni1.2
dist_pluginsXuni1D2_DATA = \
	uni1.2/code.php \
	uni1.2/description.xml

pluginsXsimpleUanovadir = $(kde_datadir)/rkward/simple_anova
dist_pluginsXsimpleUanova_DATA = \
	simple_anova/code.php \
	simple_anova/description.xml

