pluginsdir = $(kde_datadir)/rkward/
dist_plugins_DATA = \
	all.pluginmap \
	plots.pluginmap \
	distributions.pluginmap \
	embedded.pluginmap \
	analysis.pluginmap \
	x11device.pluginmap \
	import_export.pluginmap \
	under_development.pluginmap

pluginsXplotsdir = $(kde_datadir)/rkward/plots
dist_pluginsXplots_DATA = \
	plots/plot_options.php \
	plots/histogram.php \
	plots/box_plot.xml \
	plots/plot_options.xml \
	plots/box_plot.php \
	plots/histogram.xml \
	plots/ecdf_plot.php \
	plots/ecdf_plot.xml \
	plots/scatterplot.xml \
	plots/scatterplot.php \
	plots/stripchart_plot.xml \
	plots/density_plot.php \
	plots/stripchart_plot.php \
	plots/density_plot.xml \
	plots/plot_options.rkh \
	plots/cor_graph.php \
	plots/cor_graph.xml \
	plots/barplot.rkh \
	plots/barplot.php \
	plots/barplot.xml \
	plots/piechart.xml \
	plots/piechart.php \
	plots/plot.php \
	plots/plot.rkh \
	plots/plot.xml \
	plots/scatterplot_matrix.php \
	plots/scatterplot_matrix.xml \
	plots/color_chooser.php \
	plots/cor_graph.rkh \
	plots/scatterplot_matrix.rkh \
	plots/color_chooser.xml \
	plots/color_chooser.rkh \
	plots/density_plot.rkh \
	plots/pareto.php \
	plots/pareto.xml \
	plots/pareto.rkh \
	plots/barplot_options.xml \
	plots/histogram_options.php \
	plots/histogram_options.rkh \
	plots/histogram_options.xml \
	plots/barplot_options.rkh \
	plots/barplot_options.php \
	plots/stem.rkh \
	plots/stem.xml \
	plots/stem.php \
	plots/plot_stepfun_options.rkh \
	plots/plot_stepfun_options.xml \
	plots/plot_stepfun_options.php \
	plots/piechart.rkh \
	plots/histogram.rkh \
	plots/dotchart.php \
	plots/ecdf_plot.rkh \
	plots/dotchart.xml \
	plots/dotchart.rkh

pluginsXdistributionsdir = $(kde_datadir)/rkward/distributions
dist_pluginsXdistributions_DATA = \
	distributions/plot_chi_squared_distribution.xml \
	distributions/plot_normal_distribution.xml \
	distributions/chi_squared_probabilities.php \
	distributions/plot_t_distribution.php \
	distributions/plot_poisson_distribution.xml \
	distributions/t_quantiles.xml \
	distributions/f_probabilities.xml \
	distributions/normal_probabilities.xml \
	distributions/f_quantiles.php \
	distributions/poisson_probabilities.xml \
	distributions/binomial_tail_probabilities.php \
	distributions/normal_quantiles.php \
	distributions/plot_chi_squared_distribution.php \
	distributions/t_probabilities.xml \
	distributions/plot_normal_distribution.php \
	distributions/chi_squared_quantiles.xml \
	distributions/plot_poisson_distribution.php \
	distributions/binomial_quantiles.xml \
	distributions/t_quantiles.php \
	distributions/plot_f_distribution.xml \
	distributions/f_probabilities.php \
	distributions/plot_binomial_distribution.xml \
	distributions/normal_probabilities.php \
	distributions/poisson_probabilities.php \
	distributions/chi_squared_probabilities.xml \
	distributions/plot_t_distribution.xml \
	distributions/t_probabilities.php \
	distributions/chi_squared_quantiles.php \
	distributions/binomial_quantiles.php \
	distributions/plot_f_distribution.php \
	distributions/f_quantiles.xml \
	distributions/binomial_tail_probabilities.xml \
	distributions/normal_quantiles.xml \
	distributions/plot_binomial_distribution.php \
	distributions/beta_quantiles.xml \
	distributions/cauchy_probabilities.php \
	distributions/cauchy_quantiles.xml \
	distributions/beta_probabilities.php \
	distributions/beta_quantiles.php \
	distributions/beta_probabilities.xml \
	distributions/cauchy_probabilities.xml \
	distributions/cauchy_quantiles.php \
	distributions/exponential_probabilities.php \
	distributions/exponential_probabilities.xml \
	distributions/exponential_quantiles.php \
	distributions/exponential_quantiles.xml \
	distributions/gamma_probabilities.php \
	distributions/gamma_probabilities.xml \
	distributions/gamma_quantiles.php \
	distributions/gamma_quantiles.xml \
	distributions/geom_probabilities.php \
	distributions/geom_probabilities.xml \
	distributions/geom_quantiles.php \
	distributions/geom_quantiles.xml \
	distributions/gumbel_probabilities.php \
	distributions/gumbel_probabilities.xml \
	distributions/gumbel_quantiles.php \
	distributions/gumbel_quantiles.xml \
	distributions/hypergeometric_probabilities.php \
	distributions/hypergeometric_probabilities.xml \
	distributions/hypergeometric_quantiles.php \
	distributions/hypergeometric_quantiles.xml \
	distributions/log_normal_probabilities.php \
	distributions/log_normal_probabilities.xml \
	distributions/log_normal_quantiles.php \
	distributions/log_normal_quantiles.xml \
	distributions/logistic_probabilities.php \
	distributions/logistic_probabilities.xml \
	distributions/logistic_quantiles.php \
	distributions/logistic_quantiles.xml \
	distributions/negative_binomial_probabilities.php \
	distributions/negative_binomial_probabilities.xml \
	distributions/negative_binomial_quantiles.php \
	distributions/negative_binomial_quantiles.xml \
	distributions/poisson_quantiles.php \
	distributions/poisson_quantiles.xml \
	distributions/uniform_probabilities.php \
	distributions/uniform_probabilities.xml \
	distributions/uniform_quantiles.php \
	distributions/uniform_quantiles.xml \
	distributions/weibull_probabilities.php \
	distributions/weibull_probabilities.xml \
	distributions/weibull_quantiles.php \
	distributions/weibull_quantiles.xml \
	distributions/tukey_probabilities.php \
	distributions/tukey_probabilities.xml \
	distributions/tukey_quantiles.php \
	distributions/tukey_quantiles.xml \
	distributions/plot_dist_common.php \
	distributions/plot_dist_common_snippets.xml \
	distributions/plot_wilcoxon_distribution.php \
	distributions/plot_gamma_distribution.php \
	distributions/plot_gamma_distribution.xml \
	distributions/plot_geometric_distribution.php \
	distributions/plot_geometric_distribution.xml \
	distributions/plot_hypergeometric_distribution.php \
	distributions/plot_hypergeometric_distribution.xml \
	distributions/plot_negbinomial_distribution.php \
	distributions/plot_negbinomial_distribution.xml \
	distributions/plot_beta_distribution.xml \
	distributions/plot_cauchy_distribution.xml \
	distributions/plot_exponential_distribution.xml \
	distributions/plot_lognormal_distribution.xml \
	distributions/plot_tukey_distribution.php \
	distributions/plot_uniform_distribution.php \
	distributions/plot_beta_distribution.php \
	distributions/plot_cauchy_distribution.php \
	distributions/plot_logistic_distribution.xml \
	distributions/plot_exponential_distribution.php \
	distributions/plot_lognormal_distribution.php \
	distributions/plot_weibull_distribution.xml \
	distributions/plot_wilcoxon_distribution.xml \
	distributions/plot_logistic_distribution.php \
	distributions/wilcoxon_probabilities.php \
	distributions/wilcoxon_probabilities.xml \
	distributions/wilcoxon_quantiles.php \
	distributions/wilcoxon_quantiles.xml \
	distributions/plot_weibull_distribution.php \
	distributions/plot_tukey_distribution.xml \
	distributions/plot_uniform_distribution.xml \
	distributions/dist_snippets.xml \
	distributions/plot_tukey_distribution.rkh \
	distributions/plot_uniform_distribution.rkh \
	distributions/plot_negbinomial_distribution.rkh \
	distributions/plot_chi_squared_distribution.rkh \
	distributions/plot_normal_distribution.rkh \
	distributions/plot_beta_distribution.rkh \
	distributions/plot_cauchy_distribution.rkh \
	distributions/plot_exponential_distribution.rkh \
	distributions/plot_hypergeometric_distribution.rkh \
	distributions/plot_binomial_distribution.rkh \
	distributions/plot_lognormal_distribution.rkh \
	distributions/plot_t_distribution.rkh \
	distributions/plot_geometric_distribution.rkh \
	distributions/plot_gamma_distribution.rkh \
	distributions/plot_f_distribution.rkh \
	distributions/plot_logistic_distribution.rkh \
	distributions/plot_weibull_distribution.rkh \
	distributions/plot_wilcoxon_distribution.rkh \
	distributions/plot_poisson_distribution.rkh

pluginsXdistributionsXcltdir = $(kde_datadir)/rkward/distributions/clt
dist_pluginsXdistributionsXclt_DATA = \
	distributions/clt/plot_binomial_clt.php \
	distributions/clt/plot_binomial_clt.xml \
	distributions/clt/plot_binomial_clt.rkh \
	distributions/clt/plot_gamma_clt.xml \
	distributions/clt/plot_exponential_clt.xml \
	distributions/clt/plot_chi_squared_clt.xml \
	distributions/clt/plot_geometric_clt.rkh \
	distributions/clt/plot_geometric_clt.php \
	distributions/clt/plot_hypergeometric_clt.xml \
	distributions/clt/plot_hypergeometric_clt.rkh \
	distributions/clt/plot_hypergeometric_clt.php \
	distributions/clt/plot_geometric_clt.xml \
	distributions/clt/plot_poisson_clt.php \
	distributions/clt/plot_negbinomial_clt.xml \
	distributions/clt/plot_wilcoxon_clt.rkh \
	distributions/clt/plot_wilcoxon_clt.php \
	distributions/clt/plot_poisson_clt.xml \
	distributions/clt/plot_wilcoxon_clt.xml \
	distributions/clt/plot_negbinomial_clt.rkh \
	distributions/clt/plot_negbinomial_clt.php \
	distributions/clt/plot_poisson_clt.rkh \
	distributions/clt/plot_lognormal_clt.xml \
	distributions/clt/plot_beta_clt.rkh \
	distributions/clt/plot_logistic_clt.php \
	distributions/clt/plot_uniform_clt.php \
	distributions/clt/plot_f_clt.rkh \
	distributions/clt/plot_gamma_clt.php \
	distributions/clt/plot_beta_clt.xml \
	distributions/clt/plot_normal_clt.rkh \
	distributions/clt/plot_exponential_clt.php \
	distributions/clt/plot_chi_squared_clt.php \
	distributions/clt/plot_lognormal_clt.php \
	distributions/clt/plot_f_clt.xml \
	distributions/clt/plot_normal_clt.xml \
	distributions/clt/plot_logistic_clt.rkh \
	distributions/clt/plot_beta_clt.php \
	distributions/clt/plot_uniform_clt.rkh \
	distributions/clt/plot_gamma_clt.rkh \
	distributions/clt/plot_exponential_clt.rkh \
	distributions/clt/plot_chi_squared_clt.rkh \
	distributions/clt/plot_f_clt.php \
	distributions/clt/plot_logistic_clt.xml \
	distributions/clt/plot_lognormal_clt.rkh \
	distributions/clt/plot_normal_clt.php \
	distributions/clt/plot_uniform_clt.xml \
	distributions/clt/plot_weibull_clt.rkh \
	distributions/clt/plot_t_clt.php \
	distributions/clt/plot_weibull_clt.xml \
	distributions/clt/plot_t_clt.rkh \
	distributions/clt/plot_weibull_clt.php \
	distributions/clt/plot_t_clt.xml \
	distributions/clt/plot_clt_common.php \
	distributions/clt/plot_clt_snippets.xml \
	distributions/clt/plot_clt_help_snippets.xml

pluginsXdistributionsXtestsdir = $(kde_datadir)/rkward/distributions/tests
dist_pluginsXdistributionsXtests_DATA = \
	distributions/tests/ad_test.php \
	distributions/tests/ad_test.xml \
	distributions/tests/lillie_test.xml \
	distributions/tests/lillie_test.php \
	distributions/tests/cvm_test.php \
	distributions/tests/cvm_test.xml \
	distributions/tests/sf_test.xml \
	distributions/tests/sf_test.php \
	distributions/tests/shapiro_test.php \
	distributions/tests/shapiro_test.xml \
	distributions/tests/pearson_test.php \
	distributions/tests/pearson_test.xml

pluginsXuni1D2dir = $(kde_datadir)/rkward/uni1.2
dist_pluginsXuni1D2_DATA = \
	uni1.2/code.php \
	uni1.2/description.xml

pluginsXsimpleUanovadir = $(kde_datadir)/rkward/simple_anova
dist_pluginsXsimpleUanova_DATA = \
	simple_anova/code.php \
	simple_anova/description.xml

pluginsX00saveloaddir = $(kde_datadir)/rkward/00saveload
dist_pluginsX00saveload_DATA = \
	00saveload/setworkdir.rkh \
	00saveload/setworkdir.php \
	00saveload/setworkdir.xml

pluginsX00saveloadXsavedir = $(kde_datadir)/rkward/00saveload/save
dist_pluginsX00saveloadXsave_DATA = \
	00saveload/save/write_table.php \
	00saveload/save/write_table.xml

pluginsX00saveloadXsaveXskeletondir = $(kde_datadir)/rkward/00saveload/save/skeleton
dist_pluginsX00saveloadXsaveXskeleton_DATA = \
	00saveload/save/skeleton/code.php \
	00saveload/save/skeleton/description.xml

pluginsX00saveloadXsaveXwritedir = $(kde_datadir)/rkward/00saveload/save/write
dist_pluginsX00saveloadXsaveXwrite_DATA = \
	00saveload/save/write/code.php \
	00saveload/save/write/description.xml

pluginsX00saveloadXsaveXsavedir = $(kde_datadir)/rkward/00saveload/save/save
dist_pluginsX00saveloadXsaveXsave_DATA = \
	00saveload/save/save/code.php \
	00saveload/save/save/description.xml

pluginsX00saveloadXimportdir = $(kde_datadir)/rkward/00saveload/import
dist_pluginsX00saveloadXimport_DATA = \
	00saveload/import/import_spss.xml \
	00saveload/import/import_spss.php \
	00saveload/import/import_spss.rkh \
	00saveload/import/import_csv.php \
	00saveload/import/import_csv.xml \
	00saveload/import/import_csv.rkh \
	00saveload/import/load_data.php \
	00saveload/import/load_data.xml \
	00saveload/import/source.xml \
	00saveload/import/source.php \
	00saveload/import/load_data.rkh \
	00saveload/import/source.rkh

pluginsXanalysisdir = $(kde_datadir)/rkward/analysis
dist_pluginsXanalysis_DATA = \
	analysis/corr_matrix.php \
	analysis/corr_matrix.xml \
	analysis/crosstab.xml \
	analysis/corr_matrix.rkh \
	analysis/crosstab.php \
	analysis/t_test_two_vars.rkh \
	analysis/crosstab.rkh \
	analysis/t_test_two_vars.xml \
	analysis/t_test_two_vars.php

pluginsXanalysisXansariUbradleydir = $(kde_datadir)/rkward/analysis/ansari_bradley
dist_pluginsXanalysisXansariUbradley_DATA = \
	analysis/ansari_bradley/ansari_bradley_exact_test.xml \
	analysis/ansari_bradley/ansari_bradley_test.php \
	analysis/ansari_bradley/ansari_bradley_exact_test.php \
	analysis/ansari_bradley/ansari_bradley_test.xml \
	analysis/ansari_bradley/ansari_bradley_test.rkh \
	analysis/ansari_bradley/ansari_bradley_exact_test.rkh

pluginsXanalysisXmomentsdir = $(kde_datadir)/rkward/analysis/moments
dist_pluginsXanalysisXmoments_DATA = \
	analysis/moments/bonett_test.php \
	analysis/moments/agostino_test.xml \
	analysis/moments/moment.rkh \
	analysis/moments/skewness_kurtosis_test.xml \
	analysis/moments/agostino_test.rkh \
	analysis/moments/anscombe_test.xml \
	analysis/moments/moment.php \
	analysis/moments/skewness_kurtosis_test.rkh \
	analysis/moments/agostino_test.php \
	analysis/moments/anscombe_test.rkh \
	analysis/moments/bonett_test.xml \
	analysis/moments/skewness_kurtosis_test.php \
	analysis/moments/anscombe_test.php \
	analysis/moments/bonett_test.rkh \
	analysis/moments/moment.xml

pluginsXanalysisXwilcoxondir = $(kde_datadir)/rkward/analysis/wilcoxon
dist_pluginsXanalysisXwilcoxon_DATA = \
	analysis/wilcoxon/wilcoxon_exact_test.xml \
	analysis/wilcoxon/wilcoxon_test.xml \
	analysis/wilcoxon/wilcoxon_exact_test.php \
	analysis/wilcoxon/wilcoxon_test.php \
	analysis/wilcoxon/wilcoxon_test.rkh

pluginsXanalysisXoutliersdir = $(kde_datadir)/rkward/analysis/outliers
dist_pluginsXanalysisXoutliers_DATA = \
	analysis/outliers/dixon_test.xml \
	analysis/outliers/chisq_out_test.rkh \
	analysis/outliers/grubbs_test.xml \
	analysis/outliers/outlier.xml \
	analysis/outliers/chisq_out_test.php \
	analysis/outliers/dixon_test.rkh \
	analysis/outliers/dixon_test.php \
	analysis/outliers/grubbs_test.rkh \
	analysis/outliers/outlier.rkh \
	analysis/outliers/grubbs_test.php \
	analysis/outliers/outlier.php \
	analysis/outliers/chisq_out_test.xml

pluginsXanalysisXTESTSdir = $(kde_datadir)/rkward/analysis/TESTS
dist_pluginsXanalysisXTESTS_DATA = \
	analysis/TESTS/mood_test.rkh \
	analysis/TESTS/PP_test.rkh \
	analysis/TESTS/mood_test.php \
	analysis/TESTS/PP_test.php \
	analysis/TESTS/mood_test.xml \
	analysis/TESTS/PP_test.xml

pluginsXanalysisXtime_seriesdir = $(kde_datadir)/rkward/analysis/time_series
dist_pluginsXanalysisXtime_series_DATA = \
	analysis/time_series/Box_test.xml \
	analysis/time_series/Box_test.php \
	analysis/time_series/Box_test.rkh \
	analysis/time_series/kpss_test.xml \
	analysis/time_series/kpss_test.php \
	analysis/time_series/kpss_test.rkh

pluginsXanalysisXvariancesdir = $(kde_datadir)/rkward/analysis/variances
dist_pluginsXanalysisXvariances_DATA = \
	analysis/variances/bartlett_test.xml \
	analysis/variances/F_test.xml \
	analysis/variances/bartlett_test.rkh \
	analysis/variances/fligner_test.xml \
	analysis/variances/bartlett_test.php \
	analysis/variances/F_test.rkh \
	analysis/variances/fligner_test.rkh \
	analysis/variances/F_test.php \
	analysis/variances/fligner_test.php

pluginsXdescriptivedir = $(kde_datadir)/rkward/descriptive
dist_pluginsXdescriptive_DATA = \
	descriptive/descriptive_statistics.php \
	descriptive/descriptive_statistics.xml \
	descriptive/descriptive_statistics.rkh

pluginsXx11devicedir = $(kde_datadir)/rkward/x11device
dist_pluginsXx11device_DATA = \
	x11device/export.rkh \
	x11device/export.xml \
	x11device/grid.xml \
	x11device/export.php \
	x11device/grid.rkh \
	x11device/grid.php

